--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-_drafts
-_includes
-_layouts
-_posts
-_sass
+_site
 .jekyll-cache
-assets
-*.yml
-_config.yml
 default.conf
-Dockerfile
 Gemfile
 Gemfile.lock
-*markdown
-*md
